kubernetes/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: rocketchat
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6.0
        args: ["--replSet", "rs01", "--bind_ip_all"]
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongodata
            mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "default"
        resources:
          requests:
            storage: 10Gi
