kubernetes/rocketchat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  namespace: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
      - name: rocketchat
        image: rocketchat/rocket.chat:7.4.1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
