kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: rocketchat
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      name: db
  clusterIP: None
  selector:
    app: mongo
