kubernetes/rocketchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  selector:
    app: rocketchat
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
